<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Header -->

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:contentDescription="@string/logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/logo" />


        <!-- Banner -->
        <TextView
            android:id="@+id/bannerText"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="Personality Profile"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <!-- Main Content -->
        <androidx.cardview.widget.CardView
            android:id="@+id/mainCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bannerText">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp"
                android:background="#FFFFFF">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/brain_ic"
                        app:tint="@color/colorAccentPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/your_personality_traits"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/personality_summary"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <!-- Personality Traits Container -->
                <LinearLayout
                    android:id="@+id/traitsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/bars_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/mainCard"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="12dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/brain_ic"
                        app:tint="#E94435" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Detailed Analysis"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <!-- Progress Bars -->
                <include
                    android:id="@+id/neuroticism"
                    layout="@layout/trait_item_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp" />

                <include
                    android:id="@+id/extraversion"
                    layout="@layout/trait_item_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp" />

                <include
                    android:id="@+id/openness"
                    layout="@layout/trait_item_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp" />

                <include
                    android:id="@+id/agreeableness"
                    layout="@layout/trait_item_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <include
                android:id="@+id/consciousness"
                layout="@layout/trait_item_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <!-- Premium Features -->
        <androidx.cardview.widget.CardView
            android:id="@+id/premiumCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorBackground"
            app:cardCornerRadius="16dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bars_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp"
                android:background="@color/colorAccentSecondary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/lock_ic"
                        app:tint="@color/colorAccentPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/unlock_full_analysis"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/premium_description"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/premium_feature_1"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/premium_feature_2"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/premium_feature_3"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Upgrade Button -->
        <Button
            android:id="@+id/upgradeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:padding="16dp"
            android:text="@string/upgrade_to_premium"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:cornerRadius="12dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/rounded_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/premiumCard" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>